syntax = "proto3";
package NUgc.NSecurity;

message TCryptoBundle {
    // Secret text to send. Cleared by Encrypt, set by Decrypt.
    bytes Plaintext = 1;
    // Encrypted secret text. Set by Decrypt, cleared by Encrypt.
    bytes Ciphertext = 2;
    // Unique value (well-seeded pseudorandom is OK) of length GCM_NONCE_LEN.
    bytes Nonce = 3;
    // Non-secret text to be sent and validated along with the ciphertext.
    bytes Aad = 4;
    // Secure signature of this message. Set by Encrypt, validated by Decrypt.
    bytes Tag = 5;
}
